...
                          alignment: AlignmentDirectional(0.0, -1.0),
                          child: Padding(
                            padding: EdgeInsets.all(18.0),
                            child: Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('CustomerLastName_hxzy'),
                                controller:
                                    _model.customerLastNameTextController,
                                focusNode: _model.customerLastNameFocusNode,
                                onChanged: (_) => EasyDebounce.debounce(
                                  '_model.customerLastNameTextController',
                                  Duration(milliseconds: 2000),
...
                          alignment: AlignmentDirectional(0.0, 0.0),
                          child: Padding(
                            padding: EdgeInsets.all(18.0),
                            child: Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('CustomerFirstName_o0lp'),
                                controller:
                                    _model.customerFirstNameTextController,
                                focusNode: _model.customerFirstNameFocusNode,
                                onChanged: (_) => EasyDebounce.debounce(
                                  '_model.customerFirstNameTextController',
                                  Duration(milliseconds: 2000),
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: EdgeInsets.all(24.0),
                          child: FFButtonWidget(
                            key: ValueKey('Button_c7by'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'ONBOARDING_HOMEOWNER_SET_BIRTHDAY_BTN_ON');
                              logFirebaseEvent('Button_date_time_picker');
                              final _datePickedDate = await showDatePicker(
                                context: context,
...
                  ),
                  Align(
                    alignment: AlignmentDirectional(0.0, 1.0),
                    child: Padding(
                      padding: EdgeInsets.all(50.0),
                      child: FFButtonWidget(
                        key: ValueKey('Button_pj4l'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'ONBOARDING_HOMEOWNER_SUBMIT_BTN_ON_TAP');
                          logFirebaseEvent('Button_backend_call');

                          await currentUserReference!
...
