...
                    ),
                  ),
                ),
                Container(
                  width: double.infinity,
                  child: TextFormField(
                    key: ValueKey('Sign-UpEmail_j05a'),
                    controller: _model.signUpEmailTextController,
                    focusNode: _model.signUpEmailFocusNode,
                    onChanged: (_) => EasyDebounce.debounce(
                      '_model.signUpEmailTextController',
                      Duration(milliseconds: 2000),
                      () => safeSetState(() {}),
...
                        .asValidator(context),
                  ),
                ),
                Container(
                  width: double.infinity,
                  child: TextFormField(
                    key: ValueKey('Sign-UpPassword_digu'),
                    controller: _model.signUpPasswordTextController,
                    focusNode: _model.signUpPasswordFocusNode,
                    autofocus: false,
                    enabled: true,
                    obscureText: !_model.signUpPasswordVisibility,
                    decoration: InputDecoration(
...
                    enableInteractiveSelection: true,
                    validator: _model.signUpPasswordTextControllerValidator
                        .asValidator(context),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Sign-InButton_iyt3'),
                  onPressed: () async {
                    logFirebaseEvent('SIGNIN_PAGE_Sign-InButton_ON_TAP');
                    logFirebaseEvent('Sign-InButton_auth');
                    GoRouter.of(context).prepareAuthEvent();

                    final user = await authManager.signInWithEmail(
...
